<resources>
    <string name="app_name">ApexSales</string>
    <string name="base_url">http://www.nitinraghav.com/</string>
    <string name="path_url">jkapi/</string>
    <string name="title_activity_login">ApexSales</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="Logo"> Logo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">ApexSales</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu_activty_nav">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_web_view_nav">WebViewActivityNav</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
</resources>
